<resources>
    <string name="app_name">YouHelp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="crate_account">Don\'t have an account yet?</string>
    <string name="create_account_button">Create New Account</string>
    <string name="logout">Log Out</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="bio_text">User Bio</string>
    <string name="company">Company</string>
    <string name="company_name">Company name</string>
    <string name="company_name_star">Company name*</string>
    <string name="position">Position</string>
    <string name="dates">10/10/2020–10/10/2021</string>
    <string name="job_description">Job description</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="vertical_bar">|</string>
    <string name="experience">Experience</string>
    <string name="edit_add">Edit/Add</string>
    <string name="add">Add</string>
    <string name="profile_headline">Profile headline</string>
    <string name="profile_headline_star">Profile headline*</string>
    <string name="what_is_your_current_location">What is your current location?</string>
    <string name="current_location">Current location</string>
    <string name="current_location_star">Current location*</string>
    <string name="next">Next</string>
    <string name="what_roles_are_you_looking_for">What roles would fulfill your business needs?</string>
    <string name="what_sectors_are_you_looking_for">What sectors are related to your business needs?</string>
    <string name="search">Search</string>
    <string name="minimum_years_of_experience_needed">Minimum years of experience needed*</string>
    <string name="what_sector_best_describes_the_company">What sector best describes the company?</string>
    <string name="company_sector">Company sector</string>
    <string name="company_sector_star">Company sector*</string>
    <string name="starting_date">Start date</string>
    <string name="ending_date">End date</string>
    <string name="starting_date_star">Start date*</string>
    <string name="ending_date_star">End date*</string>
    <string name="i_am_an">I\'m an</string>
    <string name="entrepreneur">I\'m an Entrepreneur</string>
    <string name="a_retiree_looking_for_opportunities">I\'m a retiree looking for opportunities</string>
    <string name="role">Role</string>
    <string name="role_star">Role*</string>
    <string name="cross">✕</string>
    <string name="edit_experience">Edit experience</string>
    <string name="description">Description</string>
    <string name="delete_experience">Delete experience</string>
    <string name="add_experience">Add experience</string>
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit profile</string>
    <string name="create_profile">Create profile</string>
    <string name="describe_what_you_are_looking_for">Describe your business needs</string>
    <string name="describe_what_you_are_looking_for_star">Describe your business needs*</string>
    <string name="edit_search">Edit search</string>
    <string name="create_search">Create search</string>
    <string name="separate_multiple_with_commas">(Separate multiple with commas)</string>
    <string name="why_do_you_want_to_use_this_app">Why are you using this app?</string>
    <string name="plus">+</string>
    <string name="city_and_country_star">City and country*</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_search_parameters">Edit search parameters</string>
    <string name="search_results">Search results</string>
    <string name="register">Register</string>
    <string name="register_as_entrepreneur">Do you really want to register as an entrepreneur?</string>
    <string name="register_as_retiree">Do you really want to register as a retiree?</string>
    <string name="discard_changes">Discard changes</string>
    <string name="want_to_discard_changes">Do you really want to discard your changes?</string>
    <string name="want_to_delete_experience">Do you really want to delete this job experience?</string>
    <string name="first_name_star">First name*</string>
    <string name="last_name_star">Last name*</string>
    <string name="city_star">City*</string>
    <string name="city">City</string>
    <string name="country_star">Country*</string>
    <string name="country">Country</string>
    <string name="no_results">We couldn\'t match your search parameters to any profile, try again later</string>
    <string name="profile_photo">Profile photo</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="add_profile_headline">Do you want to write a short description about yourself for your profile?</string>
    <string name="add_location">Do you want to add your current location to your profile?</string>
    <string name="add_skills">Do you want to select skills and show them on your profile?</string>
    <string name="add_interests">Do you want to select interests and show them on your profile?</string>
    <string name="add_profile_picture">Do you want to add a profile picture?</string>
    <string name="maybe_later">No, maybe later</string>
    <string name="write_your_profile_headline">Write your profile headline</string>
    <string name="skip">Skip</string>
    <string name="keep_profile_picture">Do you want to keep this as your profile photo?</string>
    <string name="choose_another_picture">No, choose another picture</string>
    <string name="search_and_select_skills">Search and select your skills</string>
    <string name="search_and_select_interests">Search and select your interests</string>
    <string name="select_skills">Select skills</string>
    <string name="select_interests">Select interests</string>
    <string name="skill">Skill</string>
    <string name="skills">Skills</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="full_location">%1$s, %2$s</string>
    <string name="placeholder_skills">C++, MATLAB, Python, Management, Teamwork</string>
    <string name="placeholder_interests">Movies, IT, Traveling</string>
    <string name="interests">Interests</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_profile_headline">Edit profile headline</string>
    <string name="skip_location">Skip location</string>
    <string name="skip_profile_headline">Skip profile headline</string>
    <string name="skip_profile_photo">Skip profile photo</string>
    <string name="want_to_skip">Providing more information will help us showing your profile to more people. Are you sure you want to skip this step?</string>
    <string name="want_to_skip_short">Are you sure you want to skip this step?</string>
    <string name="interests_you_are_looking_for">Interests you\'re looking for</string>
    <string name="skills_you_are_looking_for">Skills you\'re looking for</string>
    <string name="search_and_select_skills_you_are_looking_for">Search and select skills you\'re looking for</string>
    <string name="search_and_select_interests_you_are_looking_for">Search and select interests you\'re looking for</string>
    <string name="successfully_saved">Successfully saved!</string>
</resources>
