<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shadow_bottom"
        android:paddingVertical="5dp"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/cancel_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/page_title_view"
            android:text="@string/cross"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="24sp"
            android:textColor="@color/grey"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/page_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/cancel_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit_profile_headline"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:textColor="@color/opposite_main"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:id="@+id/save_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/turquoise_light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/headline_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/write_your_profile_headline"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/opposite_main"
        android:layout_marginTop="80dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/headline_layout"
        style="@style/edit_page_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/headline_write_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/profile_headline"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/form_button"
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/headline_layout"
        app:layout_constraintBottom_toTopOf="@id/skip_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="50dp"/>

    <Button
        style="@style/form_button"
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>