<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/company_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/position_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/company"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/position_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/company_view"
        app:layout_constraintBottom_toTopOf="@id/job_description_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/date_view"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/position"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dates"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/job_description_view"
        app:layout_constraintLeft_toRightOf="@id/position_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_view"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/job_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/position_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="start"
        android:textSize="18sp"
        android:text="@string/job_description"
        app:layout_constraintVertical_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>