<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shadow_bottom"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/cancel_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/page_title_view"
            android:text="@string/cross"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="30sp"
            android:textColor="@color/custom_red"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/page_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/cancel_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit_profile_photo"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:textColor="@color/opposite_main"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:id="@+id/save_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
            android:textSize="25sp"
            android:textColor="@color/turquoise_light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:background="@drawable/progress_bar_background"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        android:indeterminate="true"
        android:visibility="visible"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_picture_view"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textColor="@color/opposite_main"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="90dp"
        android:text="@string/keep_profile_picture"
        android:paddingHorizontal="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        android:background="@drawable/back_avatar"
        android:src="@drawable/ic_baseline_person_120"
        android:contentDescription="@string/profile_photo"
        android:layout_marginTop="35dp"
        app:layout_goneMarginTop="50dp"/>

    <TextView
        android:id="@+id/edit_profile_photo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture_view"
        android:text="@string/edit_profile_photo"
        android:textColor="@color/turquoise_light"
        android:textSize="25sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"/>


    <Button
        style="@style/form_button"
        android:id="@+id/yes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintBottom_toTopOf="@id/no_button"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_photo_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"/>

    <Button
        style="@style/form_button"
        android:id="@+id/no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_another_picture"
        app:layout_constraintBottom_toTopOf="@id/skip_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip_button"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="50dp"/>

    <Button
        style="@style/form_button"
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintTop_toBottomOf="@id/no_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>