<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yes_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/add_profile_headline"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/opposite_main"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        style="@style/form_button"
        android:id="@+id/yes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        app:layout_constraintBottom_toTopOf="@id/no_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        style="@style/form_button"
        android:id="@+id/no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maybe_later"
        app:layout_constraintTop_toBottomOf="@id/yes_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>